force-app/main/default/objects/FieloEE__Email__c/FieloEE__Email__c.object-meta.xml
<CustomObject>
    <description>Object used for sending emails during the first step of registration. This is a Fielo’s internal object.</description>
    <label>Email</label>
    <nameField>
        <displayFormat>EMAIL-{0000}</displayFormat>
        <label>Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>