force-app/main/default/objects/FieloEE__Email__c/fields/FieloEE__Deleted__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>