force-app/main/default/objects/FieloEE__Email__c/fields/FieloEE__Email__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Email__c</fullName>
    <description>The email account used for sending emails to the members in the first step of registration.</description>
    <inlineHelpText>Enter the email account that will be used for communicating with members during the first step of registration.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>