force-app/main/default/objects/FieloEE__Email__c/fields/FieloEE__Link__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Link__c</fullName>
    <label>Link</label>
    <type>Url</type>
</CustomField>