force-app/main/default/objects/FieloEE__Email__c/fields/FieloEE__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recommend</fullName>
                <default>true</default>
                <label>Recommend</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>